commit_eme